--- a/example/Gemfile
+++ b/example/Gemfile
@@ -5,6 +5,7 @@ gem 'sqlite3'
 
 gem 'dotenv-rails'
 gem 'shopify_app', '~> 8.0.0'
+gem 'shopify_cli'
 
 gem 'sass-rails', '~> 5.0'
 gem 'uglifier', '>= 1.3.0'
@@ -13,7 +14,9 @@ gem 'jquery-rails'
 gem 'turbolinks'
 
 group :development do
-  gem 'byebug'
+  gem 'pry-rails'
+  gem 'pry'
+  gem 'pry-nav'
   gem 'web-console', '~> 2.0'
   gem 'spring'
 end
