--- a/example/Gemfile
+++ b/example/Gemfile
@@ -1,7 +1,7 @@
 source 'https://rubygems.org'
 
 gem 'rails', '~> 5.0.0'
-gem 'sqlite3'
+gem 'pg'
 
 gem 'dotenv-rails'
 gem 'shopify_app', '~> 8.0.0'
@@ -19,4 +19,9 @@ group :development do
   gem 'pry-nav'
   gem 'web-console', '~> 2.0'
   gem 'spring'
+  gem 'sqlite3'
 end
+
+gem 'rails_12factor', group: :production
+
+
